workout.css
/*
table, th, td {
	text-align: center;
	border: solid;
	border-width: thin;
	border-collapse: collapse;
}
*/
form {
	margin-left: 10px;
}

table {
	margin-right: 10px;
}

h1 {
	margin-left: 10px;
}

#card-table {
	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
    min-height: 56px;
    transition: min-height 0.3s;
    transition-property: min-height;
    transition-duration: 0.3s;
    transition-timing-function: initial;
    transition-delay: initial;
}

#card-form {
	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
    min-height: 56px;
    transition: min-height 0.3s;
    transition-property: min-height;
    transition-duration: 0.3s;
    transition-timing-function: initial;
    transition-delay: initial;
}

#Delete {
	margin-left: 5px;
}

